# eigenpy

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  COPYING.LESSER  LICENSE  README.md  colcon.pkg  eigenpyConfig.cmake  flake.nix  package.xml  pixi.toml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  check-changelog.md  check-changelog.yml  jrl-cmakemodules.yml  linux.yml  macos-linux-conda.yml  macos-linux-windows-conda.yml  macos-linux-windows-pixi.yml  reloc.yml  ros_ci.yml  update-flake-lock.yml  windows-conda.yml
.github/workflows/conda/: environment_all.yml  environment_macos_linux.yml  environment_windows.yml
benchmarks/: bench-switch.py
build_scripts/pixi/: activation_clang.sh
ci/: environment.yml
development/: build.md  contributing.md  release.md
development/scripts/pixi/: activation.bat  activation.sh
doc/: Doxyfile.extra.in  package.css
docker/ubuntu/: Dockerfile
examples/custom_numeric_type/: .gitignore  CMakeLists.txt  examplescript.py  package.xml  readme.md
examples/custom_numeric_type/cmake/: FindMPC.cmake
examples/custom_numeric_type/include/: a_class.hpp  header.hpp
examples/custom_numeric_type/src/: a_class.cpp  src.cpp
examples/custom_numeric_type/test/: test_custom_numeric_type.py
include/eigenpy/: alignment.hpp  angle-axis.hpp  boost-variant.hpp  computation-info.hpp  copyable.hpp  deprecation-policy.hpp  details.hpp  eigen-allocator.hpp  eigen-from-python.hpp  eigen-to-python.hpp  eigen-typedef.hpp  eigenpy.hpp  exception.hpp  expose.hpp  fwd.hpp  geometry-conversion.hpp  geometry.hpp  id.hpp  map.hpp  memory.hpp  numpy-allocator.hpp  numpy-map.hpp  numpy-type.hpp  numpy.hpp  optional.hpp  pickle-vector.hpp  quaternion.hpp  ref.hpp  register.hpp  registration.hpp  registration_class.hpp  scalar-conversion.hpp  scipy-allocator.hpp  scipy-type.hpp  std-aligned-vector.hpp  std-array.hpp  std-map.hpp  std-pair.hpp  std-unique-ptr.hpp  std-vector.hpp  (+8 more)
include/eigenpy/decompositions/: ColPivHouseholderQR.hpp  CompleteOrthogonalDecomposition.hpp  EigenSolver.hpp  FullPivHouseholderQR.hpp  HouseholderQR.hpp  LDLT.hpp  LLT.hpp  PermutationMatrix.hpp  QR.hpp  SelfAdjointEigenSolver.hpp  decompositions.hpp  minres.hpp
include/eigenpy/details/: rvalue_from_python_data.hpp
include/eigenpy/eigen/: EigenBase.hpp
include/eigenpy/solvers/: BFGSPreconditioners.hpp  BasicPreconditioners.hpp  ConjugateGradient.hpp  IterativeSolverBase.hpp  LeastSquaresConjugateGradient.hpp  SparseSolverBase.hpp  preconditioners.hpp  solvers.hpp
include/eigenpy/sparse/: eigen-from-python.hpp
include/eigenpy/utils/: is-aligned.hpp  (+5 more)
python/: CMakeLists.txt  alpha.py  main.cpp  test_unit.py  tgeometry.py  tse3.py  unittest.py
python/eigenpy/: __init__.py  windows_dll_manager.py
python/scripts/: __init__.py
python/test_unit/: test_geometry.py
python/utils/: std-vector.hpp
scripts/: activation.bat  activation.sh
src/: angle-axis.cpp  angle-axis.hpp  bnpy.cpp  details.cpp  details.hpp  eigen.cpp  eigenc.cpp  eigenpy.cpp  eigenpy.hpp  eigentemplate.cpp  exception.cpp  exception.hpp  fwd.hpp  geometry-conversion.cpp  geometry-conversion.hpp  geometry.hpp  map.hpp  matrix-bool.cpp  matrix-char.cpp  matrix-complex-double.cpp  matrix-complex-float.cpp  matrix-complex-long-double.cpp  matrix-double.cpp  matrix-float.cpp  matrix-int.cpp  matrix-int16.cpp  matrix-int32.cpp  matrix-int64.cpp  matrix-int8.cpp  matrix-linux-long-long.cpp  matrix-linux-ulong-long.cpp  matrix-long-double.cpp  matrix-long.cpp  matrix-mac-long.cpp  matrix-mac-ulong.cpp  matrix-uint16.cpp  matrix-uint32.cpp  matrix-uint64.cpp  matrix-uint8.cpp  matrix-windows-long.cpp  (+18 more)
src/decompositions/: accelerate.cpp  cholmod.cpp  decompositions.cpp  ldlt-solver.cpp  llt-solver.cpp  minres-solver.cpp  permutation-matrix.cpp  qr-solvers.cpp  seigen-solver.cpp  self-adjoint-eigen-solver.cpp  simplicial-ldlt-solver.cpp  simplicial-llt-solver.cpp
src/solvers/: BFGSPreconditioners.hpp  BasicPreconditioners.hpp  ConjugateGradient.hpp  IterativeSolverBase.hpp  LeastSquaresConjugateGradient.hpp  SparseSolverBase.hpp  preconditioners.cpp  solvers.cpp  solvers.hpp
travis_custom/: custom_before_install  custom_build
unittest/: CMakeLists.txt  bind_optional.cpp  bind_optional.cpp.in  bind_virtual_factory.cpp  boost_variant.cpp  ccbug.cpp  complex.cpp  deprecation_policy.cpp  eigen_ref.cpp  eigenpy_ref.cpp  geometry.cpp  include.cpp  libeigenpy.cpp  libse3.hpp  matrix.cpp  multiple_registration.cpp  pybug.cpp  ref.cpp  return_by_ref.cpp  se3.cpp  sparse_matrix.cpp  std_array.cpp  std_map.cpp  std_pair.cpp  std_unique_ptr.cpp  std_vector.cpp  tensor.cpp  timer.h  tse3.cpp  type_info.cpp  user_struct.cpp  user_type.cpp  variant.cpp.in  vector.cpp
unittest/alpha/: bnpy.cpp  eigen.cpp  eigenc.cpp  eigentemplate.cpp  mystring.cpp  simple.cpp
unittest/cmake/: CMakeLists.txt
unittest/packaging/cmake/: CMakeLists.txt  extra_lib.cpp
unittest/packaging/cmake-2x/: CMakeLists.txt
unittest/packaging/pkgconfig/: CMakeLists.txt  extra_lib.cpp
unittest/python/: test_LDLT.py  test_LLT.py  test_MINRES.py  test_QR.py  test_bind_virtual.py  test_boost_variant.py  test_complex.py  test_deprecation_policy.py  test_dimensions.py  test_eigen_ref.py  test_eigen_solver.py  test_eigenpy.py  test_geometry.py  test_id.py  test_matrix.py  test_multiple_registration.py  test_optional.py  test_optional.py.in  test_optional_boost.py  test_optional_std.py  test_return_by_ref.py  test_self_adjoint_eigen_solver.py  test_sparse_matrix.py  test_std_array.py  test_std_map.py  test_std_pair.py  test_std_unique_ptr.py  test_std_vector.py  test_switch.py  test_tensor.py  test_type_info.py  test_user_struct.py  test_user_type.py  test_variant.py.in  test_version.py
unittest/python/decompositions/sparse/: test_Accelerate.py  test_SimplicialLDLT.py  test_SimplicialLLT.py
unittest/python/decompositions/sparse/cholmod/: test_CholmodSimplicialLDLT.py  test_CholmodSimplicialLLT.py  test_CholmodSupernodalLLT.py
(+11 files in other folders)
